<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/report_kuang2"
    android:orientation="vertical"
    android:padding="5dp" >

    <TextView
        android:id="@+id/item_report_title_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/theme_tile"
        android:textColor="#4B4B4B"
        android:textSize="17sp"
        android:textStyle="bold" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@drawable/report_kuang2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/theme_colon"
            android:textColor="#76b9fd"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/item_report_theme_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/condition_feedback_theme_name"
            android:textColor="#76b9fd"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|left"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_time_colon"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_report_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="2015-06-17"
            android:textColor="@color/black"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="top|left"
        android:orientation="horizontal"
        android:paddingLeft="10dp"
        android:paddingTop="10dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accident_explain_colon"
            android:textColor="@color/black"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/item_report_explain_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/accident_explain_msg"
            android:textColor="#a9a9a9"
            android:textSize="16sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical" >

        <com.sdbnet.hywy.employee.ui.widget.CustomGridView
            android:id="@+id/item_report_grid_pic"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:horizontalSpacing="3dp"
            android:listSelector="#00000000"
            android:numColumns="4"
            android:scrollbars="none"
            android:stretchMode="columnWidth"
            android:verticalSpacing="5dp" />
    </LinearLayout>

</LinearLayout>