<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/activity_dialog_pop_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/pop_window_bg"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <Button
            android:id="@+id/activity_dialog_pop_btn_take_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_window_gallery_selector"
            android:padding="10dp"
            android:text="@string/photograph"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="@color/darkgrey" />

        <Button
            android:id="@+id/activity_dialog_pop_btn_pick_photo"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/pop_window_camera_selector"
            android:padding="10dp"
            android:text="@string/select_from_album"
            android:textStyle="bold" />

        <Button
            android:id="@+id/activity_dialog_pop_btn_cancel"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip"
            android:layout_marginTop="10dip"
            android:background="@drawable/pop_window_cancel_selector"
            android:padding="10dp"
            android:text="@string/cancel"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>